cluster/kubernetes/apps/network/gateways/internal/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.kubernetes.io/target: &addr 10.10.30.71
    gatus.home-operations.com/endpoint: |
      interval: 1m
      alerts:
        - type: pushover
      group: Internal
  labels:
    gateway-label: internal-gateway
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: *addr
  listeners:
    # catch all local http -> https
    - name: http-redirect
      hostname: '*.local.cjsolsen.com'
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # catch traffic for the ceph dashboard
    - name: ceph-dashboard
      hostname: ceph.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: ceph-cjsolsen-com
    # catch traffic for the homepage dashboard
    - name: homepage
      hostname: homepage.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: homepage-cjsolsen-com
    # catch traffic for the gatus dashboard
    - name: gatus
      hostname: gatus.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: gatus-cjsolsen-com
    # catch traffic for the grafana dashboard
    - name: grafana
      hostname: grafana.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-cjsolsen-com
    # catch traffic for the prometheus dashboard
    - name: prometheus
      hostname: prometheus.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: prometheus-cjsolsen-com
    # catch traffic for the alertmanager dashboard
    - name: alertmanager
      hostname: alertmanager.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: alertmanager-cjsolsen-com
    # catch traffic for the searxng
    - name: searxng
      hostname: search.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: searxng-cjsolsen-com
    # catch traffic for the it-tools
    - name: it-tools
      hostname: it-tools.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: it-tools-cjsolsen-com
    # catch traffic for the flux web UI
    - name: flux-web
      hostname: flux.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: flux-cjsolsen-com
    # catch traffic for the renovate dashboard
    - name: renovate-dashboard
      hostname: renovate.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: 'true'
      tls:
        mode: Terminate
        certificateRefs:
          - name: renovate-cjsolsen-com
